// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`LabelComposer golden output > stock: 40x20-rect > should produce a stable export spec for 40x20-rect 1`] = `
{
  "canvasHeightPx": 236,
  "canvasWidthPx": 472,
  "dpi": 300,
  "pixelRatio": 1,
}
`;

exports[`LabelComposer golden output > stock: 40x20-rect > should produce a stable render model for "full label with all sections" 1`] = `
{
  "bodyFontSizePx": 9,
  "columnLayout": {
    "centerWidthMm": 22.560000000000002,
    "gapCount": 1,
    "gapMm": 1,
    "innerRowMm": 38,
    "logoWidthMm": 0,
    "logoWidthPercent": 0,
    "qrWidthMm": 14.44,
    "qrWidthPercent": 38,
  },
  "customImage": undefined,
  "demotedTitle": undefined,
  "identityHeaderTitleBreakout": {
    "axisFraction": 0.2968421052631579,
    "breakoutMarginLeftPct": -0,
    "breakoutWidthPct": 168.43971631205673,
  },
  "isDangerMode": false,
  "labelLayoutMode": "identityHeader",
  "logoColumnWidthPercent": 0,
  "protocolLines": [
    "25 units (5mg)",
    "Weekly",
  ],
  "qrCodes": [
    {
      "type": "Vendor COA",
      "url": "https://example.com/coa",
    },
  ],
  "qrColumnWidthPercent": 38,
  "reconstitutionLines": [
    "1 ml BAC Water",
    "20mg per ml",
    "Mixed 20260621",
  ],
  "sourceLines": [
    "Vendor: Bear Labs",
    "Group: Group Buy Co",
    "Lot: BL-2026 20260621",
  ],
  "testIndicatorLayout": {
    "labelFontSizePx": 11,
    "labelMarkGapPx": 1,
    "markSizePx": 8,
    "rowGapPx": 2,
  },
  "testIndicators": [
    {
      "label": "Mass",
      "status": "pass",
      "type": "Mass",
    },
    {
      "label": "Purity",
      "status": "pass",
      "type": "Purity",
    },
    {
      "label": "LC/MS",
      "status": "not_run",
      "type": "LCMS",
    },
  ],
  "title": "Tirzepatide
20mg",
  "titleFontSizePx": 26,
  "titleLines": [
    "Tirzepatide",
    "20mg",
  ],
  "wrappedLines": [
    "Tirzepatide",
    "20mg",
    "1 ml BAC Water",
    "20mg per ml",
    "Mixed 20260621",
    "25 units (5mg)",
    "Weekly",
    "Vendor: Bear Labs",
    "Group: Group Buy Co",
    "Lot: BL-2026 20260621",
  ],
}
`;

exports[`LabelComposer golden output > stock: 40x20-rect > should produce a stable render model for "logo plus QR plus indicators" 1`] = `
{
  "bodyFontSizePx": 26,
  "columnLayout": {
    "centerWidthMm": 13.959999999999999,
    "gapCount": 2,
    "gapMm": 1,
    "innerRowMm": 38,
    "logoWidthMm": 7.6000000000000005,
    "logoWidthPercent": 20,
    "qrWidthMm": 14.44,
    "qrWidthPercent": 38,
  },
  "customImage": "data:image/png;base64,test",
  "demotedTitle": undefined,
  "identityHeaderTitleBreakout": {
    "axisFraction": 0.41000000000000003,
    "breakoutMarginLeftPct": -61.60458452722064,
    "breakoutWidthPct": 272.2063037249284,
  },
  "isDangerMode": false,
  "labelLayoutMode": "identityHeader",
  "logoColumnWidthPercent": 20,
  "protocolLines": [],
  "qrCodes": [
    {
      "type": "Vendor COA",
      "url": "https://example.com/coa",
    },
  ],
  "qrColumnWidthPercent": 38,
  "reconstitutionLines": [],
  "sourceLines": [],
  "testIndicatorLayout": {
    "labelFontSizePx": 11,
    "labelMarkGapPx": 1,
    "markSizePx": 8,
    "rowGapPx": 2,
  },
  "testIndicators": [
    {
      "label": "Mass",
      "status": "pass",
      "type": "Mass",
    },
    {
      "label": "Purity",
      "status": "fail",
      "type": "Purity",
    },
    {
      "label": "Endotoxin",
      "status": "not_run",
      "type": "Endotoxin",
    },
  ],
  "title": "Semaglutide
10mg",
  "titleFontSizePx": 26,
  "titleLines": [
    "Semaglutide",
    "10mg",
  ],
  "wrappedLines": [
    "Semaglutide",
    "10mg",
  ],
}
`;

exports[`LabelComposer golden output > stock: 40x20-rect > should produce a stable render model for "long compound name forcing wrap" 1`] = `
{
  "bodyFontSizePx": 15,
  "columnLayout": {
    "centerWidthMm": 38,
    "gapCount": 0,
    "gapMm": 1,
    "innerRowMm": 38,
    "logoWidthMm": 0,
    "logoWidthPercent": 0,
    "qrWidthMm": 0,
    "qrWidthPercent": 0,
  },
  "customImage": undefined,
  "demotedTitle": undefined,
  "identityHeaderTitleBreakout": {
    "axisFraction": 0.5,
    "breakoutMarginLeftPct": -0,
    "breakoutWidthPct": 100,
  },
  "isDangerMode": false,
  "labelLayoutMode": "identityHeader",
  "logoColumnWidthPercent": 0,
  "protocolLines": [
    "25 units (5mg)",
  ],
  "qrCodes": [],
  "qrColumnWidthPercent": 0,
  "reconstitutionLines": [
    "1 ml",
    "20mg per ml",
  ],
  "sourceLines": [],
  "testIndicatorLayout": undefined,
  "testIndicators": [],
  "title": "Very Long Experimental Compound Name That Forces Title Wrapping
20mg",
  "titleFontSizePx": 21,
  "titleLines": [
    "Very Long Experimental",
    "Compound Name That",
    "Forces Title Wrapping",
    "20mg",
  ],
  "wrappedLines": [
    "Very Long Experimental",
    "Compound Name That",
    "Forces Title Wrapping",
    "20mg",
    "1 ml",
    "20mg per ml",
    "25 units (5mg)",
  ],
}
`;

exports[`LabelComposer golden output > stock: 40x20-rect > should produce a stable render model for "minimal name only" 1`] = `
{
  "bodyFontSizePx": 26,
  "columnLayout": {
    "centerWidthMm": 38,
    "gapCount": 0,
    "gapMm": 1,
    "innerRowMm": 38,
    "logoWidthMm": 0,
    "logoWidthPercent": 0,
    "qrWidthMm": 0,
    "qrWidthPercent": 0,
  },
  "customImage": undefined,
  "demotedTitle": undefined,
  "identityHeaderTitleBreakout": {
    "axisFraction": 0.5,
    "breakoutMarginLeftPct": -0,
    "breakoutWidthPct": 100,
  },
  "isDangerMode": false,
  "labelLayoutMode": "identityHeader",
  "logoColumnWidthPercent": 0,
  "protocolLines": [],
  "qrCodes": [],
  "qrColumnWidthPercent": 0,
  "reconstitutionLines": [],
  "sourceLines": [],
  "testIndicatorLayout": undefined,
  "testIndicators": [],
  "title": "Tirzepatide",
  "titleFontSizePx": 26,
  "titleLines": [
    "Tirzepatide",
  ],
  "wrappedLines": [
    "Tirzepatide",
  ],
}
`;

exports[`LabelComposer golden output > stock: 40x20-rect > should produce a stable render model for "untested danger mode" 1`] = `
{
  "bodyFontSizePx": 15.200000000000001,
  "columnLayout": {
    "centerWidthMm": 38,
    "gapCount": 0,
    "gapMm": 1,
    "innerRowMm": 38,
    "logoWidthMm": 0,
    "logoWidthPercent": 0,
    "qrWidthMm": 0,
    "qrWidthPercent": 0,
  },
  "customImage": undefined,
  "demotedTitle": "Retatrutide
20mg",
  "identityHeaderTitleBreakout": {
    "axisFraction": 0.5,
    "breakoutMarginLeftPct": -0,
    "breakoutWidthPct": 100,
  },
  "isDangerMode": true,
  "labelLayoutMode": "identityHeader",
  "logoColumnWidthPercent": 0,
  "protocolLines": [
    "25 units (5mg)",
  ],
  "qrCodes": [],
  "qrColumnWidthPercent": 0,
  "reconstitutionLines": [
    "1 ml",
    "20mg per ml",
  ],
  "sourceLines": [],
  "testIndicatorLayout": undefined,
  "testIndicators": [],
  "title": "DANGER
UNTESTED",
  "titleFontSizePx": 26,
  "titleLines": [
    "DANGER",
    "UNTESTED",
  ],
  "wrappedLines": [
    "DANGER",
    "UNTESTED",
    "Retatrutide
20mg",
    "1 ml",
    "20mg per ml",
    "25 units (5mg)",
  ],
}
`;

exports[`LabelComposer golden output > stock: 40x20-rounded > should produce a stable export spec for 40x20-rounded 1`] = `
{
  "canvasHeightPx": 236,
  "canvasWidthPx": 472,
  "dpi": 300,
  "pixelRatio": 1,
}
`;

exports[`LabelComposer golden output > stock: 40x20-rounded > should produce a stable render model for "full label with all sections" 1`] = `
{
  "bodyFontSizePx": 11,
  "columnLayout": {
    "centerWidthMm": 23.68,
    "gapCount": 1,
    "gapMm": 0.5,
    "innerRowMm": 39,
    "logoWidthMm": 0,
    "logoWidthPercent": 0,
    "qrWidthMm": 14.82,
    "qrWidthPercent": 38,
  },
  "customImage": undefined,
  "demotedTitle": undefined,
  "identityHeaderTitleBreakout": {
    "axisFraction": 0.3035897435897436,
    "breakoutMarginLeftPct": -0,
    "breakoutWidthPct": 164.69594594594594,
  },
  "isDangerMode": false,
  "labelLayoutMode": "identityHeader",
  "logoColumnWidthPercent": 0,
  "protocolLines": [
    "25 units (5mg)",
    "Weekly",
  ],
  "qrCodes": [
    {
      "type": "Vendor COA",
      "url": "https://example.com/coa",
    },
  ],
  "qrColumnWidthPercent": 38,
  "reconstitutionLines": [
    "1 ml BAC Water",
    "20mg per ml",
    "Mixed 20260621",
  ],
  "sourceLines": [
    "Vendor: Bear Labs",
    "Group: Group Buy Co",
    "Lot: BL-2026 20260621",
  ],
  "testIndicatorLayout": {
    "labelFontSizePx": 11,
    "labelMarkGapPx": 1,
    "markSizePx": 11,
    "rowGapPx": 2,
  },
  "testIndicators": [
    {
      "label": "Mass",
      "status": "pass",
      "type": "Mass",
    },
    {
      "label": "Purity",
      "status": "pass",
      "type": "Purity",
    },
    {
      "label": "LC/MS",
      "status": "not_run",
      "type": "LCMS",
    },
  ],
  "title": "Tirzepatide
20mg",
  "titleFontSizePx": 26,
  "titleLines": [
    "Tirzepatide",
    "20mg",
  ],
  "wrappedLines": [
    "Tirzepatide",
    "20mg",
    "1 ml BAC Water",
    "20mg per ml",
    "Mixed 20260621",
    "25 units (5mg)",
    "Weekly",
    "Vendor: Bear Labs",
    "Group: Group Buy Co",
    "Lot: BL-2026 20260621",
  ],
}
`;

exports[`LabelComposer golden output > stock: 40x20-rounded > should produce a stable render model for "logo plus QR plus indicators" 1`] = `
{
  "bodyFontSizePx": 26,
  "columnLayout": {
    "centerWidthMm": 15.379999999999999,
    "gapCount": 2,
    "gapMm": 0.5,
    "innerRowMm": 39,
    "logoWidthMm": 7.800000000000001,
    "logoWidthPercent": 20,
    "qrWidthMm": 14.82,
    "qrWidthPercent": 38,
  },
  "customImage": "data:image/png;base64,test",
  "demotedTitle": undefined,
  "identityHeaderTitleBreakout": {
    "axisFraction": 0.41000000000000003,
    "breakoutMarginLeftPct": -53.966189856957094,
    "breakoutWidthPct": 253.57607282184657,
  },
  "isDangerMode": false,
  "labelLayoutMode": "identityHeader",
  "logoColumnWidthPercent": 20,
  "protocolLines": [],
  "qrCodes": [
    {
      "type": "Vendor COA",
      "url": "https://example.com/coa",
    },
  ],
  "qrColumnWidthPercent": 38,
  "reconstitutionLines": [],
  "sourceLines": [],
  "testIndicatorLayout": {
    "labelFontSizePx": 11,
    "labelMarkGapPx": 1,
    "markSizePx": 11,
    "rowGapPx": 2,
  },
  "testIndicators": [
    {
      "label": "Mass",
      "status": "pass",
      "type": "Mass",
    },
    {
      "label": "Purity",
      "status": "fail",
      "type": "Purity",
    },
    {
      "label": "Endotoxin",
      "status": "not_run",
      "type": "Endotoxin",
    },
  ],
  "title": "Semaglutide
10mg",
  "titleFontSizePx": 26,
  "titleLines": [
    "Semaglutide",
    "10mg",
  ],
  "wrappedLines": [
    "Semaglutide",
    "10mg",
  ],
}
`;

exports[`LabelComposer golden output > stock: 40x20-rounded > should produce a stable render model for "long compound name forcing wrap" 1`] = `
{
  "bodyFontSizePx": 16,
  "columnLayout": {
    "centerWidthMm": 39,
    "gapCount": 0,
    "gapMm": 0.5,
    "innerRowMm": 39,
    "logoWidthMm": 0,
    "logoWidthPercent": 0,
    "qrWidthMm": 0,
    "qrWidthPercent": 0,
  },
  "customImage": undefined,
  "demotedTitle": undefined,
  "identityHeaderTitleBreakout": {
    "axisFraction": 0.5,
    "breakoutMarginLeftPct": -0,
    "breakoutWidthPct": 100,
  },
  "isDangerMode": false,
  "labelLayoutMode": "identityHeader",
  "logoColumnWidthPercent": 0,
  "protocolLines": [
    "25 units (5mg)",
  ],
  "qrCodes": [],
  "qrColumnWidthPercent": 0,
  "reconstitutionLines": [
    "1 ml",
    "20mg per ml",
  ],
  "sourceLines": [],
  "testIndicatorLayout": undefined,
  "testIndicators": [],
  "title": "Very Long Experimental Compound Name That Forces Title Wrapping
20mg",
  "titleFontSizePx": 22,
  "titleLines": [
    "Very Long Experimental",
    "Compound Name That",
    "Forces Title Wrapping",
    "20mg",
  ],
  "wrappedLines": [
    "Very Long Experimental",
    "Compound Name That",
    "Forces Title Wrapping",
    "20mg",
    "1 ml",
    "20mg per ml",
    "25 units (5mg)",
  ],
}
`;

exports[`LabelComposer golden output > stock: 40x20-rounded > should produce a stable render model for "minimal name only" 1`] = `
{
  "bodyFontSizePx": 26,
  "columnLayout": {
    "centerWidthMm": 39,
    "gapCount": 0,
    "gapMm": 0.5,
    "innerRowMm": 39,
    "logoWidthMm": 0,
    "logoWidthPercent": 0,
    "qrWidthMm": 0,
    "qrWidthPercent": 0,
  },
  "customImage": undefined,
  "demotedTitle": undefined,
  "identityHeaderTitleBreakout": {
    "axisFraction": 0.5,
    "breakoutMarginLeftPct": -0,
    "breakoutWidthPct": 100,
  },
  "isDangerMode": false,
  "labelLayoutMode": "identityHeader",
  "logoColumnWidthPercent": 0,
  "protocolLines": [],
  "qrCodes": [],
  "qrColumnWidthPercent": 0,
  "reconstitutionLines": [],
  "sourceLines": [],
  "testIndicatorLayout": undefined,
  "testIndicators": [],
  "title": "Tirzepatide",
  "titleFontSizePx": 26,
  "titleLines": [
    "Tirzepatide",
  ],
  "wrappedLines": [
    "Tirzepatide",
  ],
}
`;

exports[`LabelComposer golden output > stock: 40x20-rounded > should produce a stable render model for "untested danger mode" 1`] = `
{
  "bodyFontSizePx": 15.200000000000001,
  "columnLayout": {
    "centerWidthMm": 39,
    "gapCount": 0,
    "gapMm": 0.5,
    "innerRowMm": 39,
    "logoWidthMm": 0,
    "logoWidthPercent": 0,
    "qrWidthMm": 0,
    "qrWidthPercent": 0,
  },
  "customImage": undefined,
  "demotedTitle": "Retatrutide
20mg",
  "identityHeaderTitleBreakout": {
    "axisFraction": 0.5,
    "breakoutMarginLeftPct": -0,
    "breakoutWidthPct": 100,
  },
  "isDangerMode": true,
  "labelLayoutMode": "identityHeader",
  "logoColumnWidthPercent": 0,
  "protocolLines": [
    "25 units (5mg)",
  ],
  "qrCodes": [],
  "qrColumnWidthPercent": 0,
  "reconstitutionLines": [
    "1 ml",
    "20mg per ml",
  ],
  "sourceLines": [],
  "testIndicatorLayout": undefined,
  "testIndicators": [],
  "title": "DANGER
UNTESTED",
  "titleFontSizePx": 26,
  "titleLines": [
    "DANGER",
    "UNTESTED",
  ],
  "wrappedLines": [
    "DANGER",
    "UNTESTED",
    "Retatrutide
20mg",
    "1 ml",
    "20mg per ml",
    "25 units (5mg)",
  ],
}
`;

exports[`LabelComposer golden output > stock: 40x30-rect > should produce a stable export spec for 40x30-rect 1`] = `
{
  "canvasHeightPx": 354,
  "canvasWidthPx": 472,
  "dpi": 300,
  "pixelRatio": 1,
}
`;

exports[`LabelComposer golden output > stock: 40x30-rect > should produce a stable render model for "full label with all sections" 1`] = `
{
  "bodyFontSizePx": 18,
  "columnLayout": {
    "centerWidthMm": 22.560000000000002,
    "gapCount": 1,
    "gapMm": 1,
    "innerRowMm": 38,
    "logoWidthMm": 0,
    "logoWidthPercent": 0,
    "qrWidthMm": 14.44,
    "qrWidthPercent": 38,
  },
  "customImage": undefined,
  "demotedTitle": undefined,
  "identityHeaderTitleBreakout": {
    "axisFraction": 0.2968421052631579,
    "breakoutMarginLeftPct": -0,
    "breakoutWidthPct": 168.43971631205673,
  },
  "isDangerMode": false,
  "labelLayoutMode": "identityHeader",
  "logoColumnWidthPercent": 0,
  "protocolLines": [
    "25 units (5mg)",
    "Weekly",
  ],
  "qrCodes": [
    {
      "type": "Vendor COA",
      "url": "https://example.com/coa",
    },
  ],
  "qrColumnWidthPercent": 38,
  "reconstitutionLines": [
    "1 ml BAC Water",
    "20mg per ml",
    "Mixed 20260621",
  ],
  "sourceLines": [
    "Vendor: Bear Labs",
    "Group: Group Buy Co",
    "Lot: BL-2026 20260621",
  ],
  "testIndicatorLayout": {
    "labelFontSizePx": 12,
    "labelMarkGapPx": 1,
    "markSizePx": 21,
    "rowGapPx": 2,
  },
  "testIndicators": [
    {
      "label": "Mass",
      "status": "pass",
      "type": "Mass",
    },
    {
      "label": "Purity",
      "status": "pass",
      "type": "Purity",
    },
    {
      "label": "LC/MS",
      "status": "not_run",
      "type": "LCMS",
    },
  ],
  "title": "Tirzepatide
20mg",
  "titleFontSizePx": 39,
  "titleLines": [
    "Tirzepatide",
    "20mg",
  ],
  "wrappedLines": [
    "Tirzepatide",
    "20mg",
    "1 ml BAC Water",
    "20mg per ml",
    "Mixed 20260621",
    "25 units (5mg)",
    "Weekly",
    "Vendor: Bear Labs",
    "Group: Group Buy Co",
    "Lot: BL-2026 20260621",
  ],
}
`;

exports[`LabelComposer golden output > stock: 40x30-rect > should produce a stable render model for "logo plus QR plus indicators" 1`] = `
{
  "bodyFontSizePx": 39,
  "columnLayout": {
    "centerWidthMm": 13.959999999999999,
    "gapCount": 2,
    "gapMm": 1,
    "innerRowMm": 38,
    "logoWidthMm": 7.6000000000000005,
    "logoWidthPercent": 20,
    "qrWidthMm": 14.44,
    "qrWidthPercent": 38,
  },
  "customImage": "data:image/png;base64,test",
  "demotedTitle": undefined,
  "identityHeaderTitleBreakout": {
    "axisFraction": 0.41000000000000003,
    "breakoutMarginLeftPct": -61.60458452722064,
    "breakoutWidthPct": 272.2063037249284,
  },
  "isDangerMode": false,
  "labelLayoutMode": "identityHeader",
  "logoColumnWidthPercent": 20,
  "protocolLines": [],
  "qrCodes": [
    {
      "type": "Vendor COA",
      "url": "https://example.com/coa",
    },
  ],
  "qrColumnWidthPercent": 38,
  "reconstitutionLines": [],
  "sourceLines": [],
  "testIndicatorLayout": {
    "labelFontSizePx": 12,
    "labelMarkGapPx": 1,
    "markSizePx": 21,
    "rowGapPx": 2,
  },
  "testIndicators": [
    {
      "label": "Mass",
      "status": "pass",
      "type": "Mass",
    },
    {
      "label": "Purity",
      "status": "fail",
      "type": "Purity",
    },
    {
      "label": "Endotoxin",
      "status": "not_run",
      "type": "Endotoxin",
    },
  ],
  "title": "Semaglutide
10mg",
  "titleFontSizePx": 39,
  "titleLines": [
    "Semaglutide",
    "10mg",
  ],
  "wrappedLines": [
    "Semaglutide",
    "10mg",
  ],
}
`;

exports[`LabelComposer golden output > stock: 40x30-rect > should produce a stable render model for "long compound name forcing wrap" 1`] = `
{
  "bodyFontSizePx": 18,
  "columnLayout": {
    "centerWidthMm": 38,
    "gapCount": 0,
    "gapMm": 1,
    "innerRowMm": 38,
    "logoWidthMm": 0,
    "logoWidthPercent": 0,
    "qrWidthMm": 0,
    "qrWidthPercent": 0,
  },
  "customImage": undefined,
  "demotedTitle": undefined,
  "identityHeaderTitleBreakout": {
    "axisFraction": 0.5,
    "breakoutMarginLeftPct": -0,
    "breakoutWidthPct": 100,
  },
  "isDangerMode": false,
  "labelLayoutMode": "identityHeader",
  "logoColumnWidthPercent": 0,
  "protocolLines": [
    "25 units (5mg)",
  ],
  "qrCodes": [],
  "qrColumnWidthPercent": 0,
  "reconstitutionLines": [
    "1 ml",
    "20mg per ml",
  ],
  "sourceLines": [],
  "testIndicatorLayout": undefined,
  "testIndicators": [],
  "title": "Very Long Experimental Compound Name That Forces Title Wrapping
20mg",
  "titleFontSizePx": 25,
  "titleLines": [
    "Very Long",
    "Experimental",
    "Compound Name That",
    "Forces Title",
    "Wrapping",
    "20mg",
  ],
  "wrappedLines": [
    "Very Long",
    "Experimental",
    "Compound Name That",
    "Forces Title",
    "Wrapping",
    "20mg",
    "1 ml",
    "20mg per ml",
    "25 units (5mg)",
  ],
}
`;

exports[`LabelComposer golden output > stock: 40x30-rect > should produce a stable render model for "minimal name only" 1`] = `
{
  "bodyFontSizePx": 39,
  "columnLayout": {
    "centerWidthMm": 38,
    "gapCount": 0,
    "gapMm": 1,
    "innerRowMm": 38,
    "logoWidthMm": 0,
    "logoWidthPercent": 0,
    "qrWidthMm": 0,
    "qrWidthPercent": 0,
  },
  "customImage": undefined,
  "demotedTitle": undefined,
  "identityHeaderTitleBreakout": {
    "axisFraction": 0.5,
    "breakoutMarginLeftPct": -0,
    "breakoutWidthPct": 100,
  },
  "isDangerMode": false,
  "labelLayoutMode": "identityHeader",
  "logoColumnWidthPercent": 0,
  "protocolLines": [],
  "qrCodes": [],
  "qrColumnWidthPercent": 0,
  "reconstitutionLines": [],
  "sourceLines": [],
  "testIndicatorLayout": undefined,
  "testIndicators": [],
  "title": "Tirzepatide",
  "titleFontSizePx": 39,
  "titleLines": [
    "Tirzepatide",
  ],
  "wrappedLines": [
    "Tirzepatide",
  ],
}
`;

exports[`LabelComposer golden output > stock: 40x30-rect > should produce a stable render model for "untested danger mode" 1`] = `
{
  "bodyFontSizePx": 22.400000000000002,
  "columnLayout": {
    "centerWidthMm": 38,
    "gapCount": 0,
    "gapMm": 1,
    "innerRowMm": 38,
    "logoWidthMm": 0,
    "logoWidthPercent": 0,
    "qrWidthMm": 0,
    "qrWidthPercent": 0,
  },
  "customImage": undefined,
  "demotedTitle": "Retatrutide
20mg",
  "identityHeaderTitleBreakout": {
    "axisFraction": 0.5,
    "breakoutMarginLeftPct": -0,
    "breakoutWidthPct": 100,
  },
  "isDangerMode": true,
  "labelLayoutMode": "identityHeader",
  "logoColumnWidthPercent": 0,
  "protocolLines": [
    "25 units (5mg)",
  ],
  "qrCodes": [],
  "qrColumnWidthPercent": 0,
  "reconstitutionLines": [
    "1 ml",
    "20mg per ml",
  ],
  "sourceLines": [],
  "testIndicatorLayout": undefined,
  "testIndicators": [],
  "title": "DANGER
UNTESTED",
  "titleFontSizePx": 38,
  "titleLines": [
    "DANGER",
    "UNTESTED",
  ],
  "wrappedLines": [
    "DANGER",
    "UNTESTED",
    "Retatrutide
20mg",
    "1 ml",
    "20mg per ml",
    "25 units (5mg)",
  ],
}
`;

exports[`LabelComposer golden output > stock: 40x30-rounded > should produce a stable export spec for 40x30-rounded 1`] = `
{
  "canvasHeightPx": 354,
  "canvasWidthPx": 472,
  "dpi": 300,
  "pixelRatio": 1,
}
`;

exports[`LabelComposer golden output > stock: 40x30-rounded > should produce a stable render model for "full label with all sections" 1`] = `
{
  "bodyFontSizePx": 19,
  "columnLayout": {
    "centerWidthMm": 23.68,
    "gapCount": 1,
    "gapMm": 0.5,
    "innerRowMm": 39,
    "logoWidthMm": 0,
    "logoWidthPercent": 0,
    "qrWidthMm": 14.82,
    "qrWidthPercent": 38,
  },
  "customImage": undefined,
  "demotedTitle": undefined,
  "identityHeaderTitleBreakout": {
    "axisFraction": 0.3035897435897436,
    "breakoutMarginLeftPct": -0,
    "breakoutWidthPct": 164.69594594594594,
  },
  "isDangerMode": false,
  "labelLayoutMode": "identityHeader",
  "logoColumnWidthPercent": 0,
  "protocolLines": [
    "25 units (5mg)",
    "Weekly",
  ],
  "qrCodes": [
    {
      "type": "Vendor COA",
      "url": "https://example.com/coa",
    },
  ],
  "qrColumnWidthPercent": 38,
  "reconstitutionLines": [
    "1 ml BAC Water",
    "20mg per ml",
    "Mixed 20260621",
  ],
  "sourceLines": [
    "Vendor: Bear Labs",
    "Group: Group Buy Co",
    "Lot: BL-2026 20260621",
  ],
  "testIndicatorLayout": {
    "labelFontSizePx": 13,
    "labelMarkGapPx": 1,
    "markSizePx": 23,
    "rowGapPx": 2,
  },
  "testIndicators": [
    {
      "label": "Mass",
      "status": "pass",
      "type": "Mass",
    },
    {
      "label": "Purity",
      "status": "pass",
      "type": "Purity",
    },
    {
      "label": "LC/MS",
      "status": "not_run",
      "type": "LCMS",
    },
  ],
  "title": "Tirzepatide
20mg",
  "titleFontSizePx": 39,
  "titleLines": [
    "Tirzepatide",
    "20mg",
  ],
  "wrappedLines": [
    "Tirzepatide",
    "20mg",
    "1 ml BAC Water",
    "20mg per ml",
    "Mixed 20260621",
    "25 units (5mg)",
    "Weekly",
    "Vendor: Bear Labs",
    "Group: Group Buy Co",
    "Lot: BL-2026 20260621",
  ],
}
`;

exports[`LabelComposer golden output > stock: 40x30-rounded > should produce a stable render model for "logo plus QR plus indicators" 1`] = `
{
  "bodyFontSizePx": 39,
  "columnLayout": {
    "centerWidthMm": 15.379999999999999,
    "gapCount": 2,
    "gapMm": 0.5,
    "innerRowMm": 39,
    "logoWidthMm": 7.800000000000001,
    "logoWidthPercent": 20,
    "qrWidthMm": 14.82,
    "qrWidthPercent": 38,
  },
  "customImage": "data:image/png;base64,test",
  "demotedTitle": undefined,
  "identityHeaderTitleBreakout": {
    "axisFraction": 0.41000000000000003,
    "breakoutMarginLeftPct": -53.966189856957094,
    "breakoutWidthPct": 253.57607282184657,
  },
  "isDangerMode": false,
  "labelLayoutMode": "identityHeader",
  "logoColumnWidthPercent": 20,
  "protocolLines": [],
  "qrCodes": [
    {
      "type": "Vendor COA",
      "url": "https://example.com/coa",
    },
  ],
  "qrColumnWidthPercent": 38,
  "reconstitutionLines": [],
  "sourceLines": [],
  "testIndicatorLayout": {
    "labelFontSizePx": 13,
    "labelMarkGapPx": 1,
    "markSizePx": 23,
    "rowGapPx": 2,
  },
  "testIndicators": [
    {
      "label": "Mass",
      "status": "pass",
      "type": "Mass",
    },
    {
      "label": "Purity",
      "status": "fail",
      "type": "Purity",
    },
    {
      "label": "Endotoxin",
      "status": "not_run",
      "type": "Endotoxin",
    },
  ],
  "title": "Semaglutide
10mg",
  "titleFontSizePx": 39,
  "titleLines": [
    "Semaglutide",
    "10mg",
  ],
  "wrappedLines": [
    "Semaglutide",
    "10mg",
  ],
}
`;

exports[`LabelComposer golden output > stock: 40x30-rounded > should produce a stable render model for "long compound name forcing wrap" 1`] = `
{
  "bodyFontSizePx": 19,
  "columnLayout": {
    "centerWidthMm": 39,
    "gapCount": 0,
    "gapMm": 0.5,
    "innerRowMm": 39,
    "logoWidthMm": 0,
    "logoWidthPercent": 0,
    "qrWidthMm": 0,
    "qrWidthPercent": 0,
  },
  "customImage": undefined,
  "demotedTitle": undefined,
  "identityHeaderTitleBreakout": {
    "axisFraction": 0.5,
    "breakoutMarginLeftPct": -0,
    "breakoutWidthPct": 100,
  },
  "isDangerMode": false,
  "labelLayoutMode": "identityHeader",
  "logoColumnWidthPercent": 0,
  "protocolLines": [
    "25 units (5mg)",
  ],
  "qrCodes": [],
  "qrColumnWidthPercent": 0,
  "reconstitutionLines": [
    "1 ml",
    "20mg per ml",
  ],
  "sourceLines": [],
  "testIndicatorLayout": undefined,
  "testIndicators": [],
  "title": "Very Long Experimental Compound Name That Forces Title Wrapping
20mg",
  "titleFontSizePx": 26,
  "titleLines": [
    "Very Long",
    "Experimental",
    "Compound Name That",
    "Forces Title",
    "Wrapping",
    "20mg",
  ],
  "wrappedLines": [
    "Very Long",
    "Experimental",
    "Compound Name That",
    "Forces Title",
    "Wrapping",
    "20mg",
    "1 ml",
    "20mg per ml",
    "25 units (5mg)",
  ],
}
`;

exports[`LabelComposer golden output > stock: 40x30-rounded > should produce a stable render model for "minimal name only" 1`] = `
{
  "bodyFontSizePx": 39,
  "columnLayout": {
    "centerWidthMm": 39,
    "gapCount": 0,
    "gapMm": 0.5,
    "innerRowMm": 39,
    "logoWidthMm": 0,
    "logoWidthPercent": 0,
    "qrWidthMm": 0,
    "qrWidthPercent": 0,
  },
  "customImage": undefined,
  "demotedTitle": undefined,
  "identityHeaderTitleBreakout": {
    "axisFraction": 0.5,
    "breakoutMarginLeftPct": -0,
    "breakoutWidthPct": 100,
  },
  "isDangerMode": false,
  "labelLayoutMode": "identityHeader",
  "logoColumnWidthPercent": 0,
  "protocolLines": [],
  "qrCodes": [],
  "qrColumnWidthPercent": 0,
  "reconstitutionLines": [],
  "sourceLines": [],
  "testIndicatorLayout": undefined,
  "testIndicators": [],
  "title": "Tirzepatide",
  "titleFontSizePx": 39,
  "titleLines": [
    "Tirzepatide",
  ],
  "wrappedLines": [
    "Tirzepatide",
  ],
}
`;

exports[`LabelComposer golden output > stock: 40x30-rounded > should produce a stable render model for "untested danger mode" 1`] = `
{
  "bodyFontSizePx": 22.400000000000002,
  "columnLayout": {
    "centerWidthMm": 39,
    "gapCount": 0,
    "gapMm": 0.5,
    "innerRowMm": 39,
    "logoWidthMm": 0,
    "logoWidthPercent": 0,
    "qrWidthMm": 0,
    "qrWidthPercent": 0,
  },
  "customImage": undefined,
  "demotedTitle": "Retatrutide
20mg",
  "identityHeaderTitleBreakout": {
    "axisFraction": 0.5,
    "breakoutMarginLeftPct": -0,
    "breakoutWidthPct": 100,
  },
  "isDangerMode": true,
  "labelLayoutMode": "identityHeader",
  "logoColumnWidthPercent": 0,
  "protocolLines": [
    "25 units (5mg)",
  ],
  "qrCodes": [],
  "qrColumnWidthPercent": 0,
  "reconstitutionLines": [
    "1 ml",
    "20mg per ml",
  ],
  "sourceLines": [],
  "testIndicatorLayout": undefined,
  "testIndicators": [],
  "title": "DANGER
UNTESTED",
  "titleFontSizePx": 39,
  "titleLines": [
    "DANGER",
    "UNTESTED",
  ],
  "wrappedLines": [
    "DANGER",
    "UNTESTED",
    "Retatrutide
20mg",
    "1 ml",
    "20mg per ml",
    "25 units (5mg)",
  ],
}
`;

exports[`LabelComposer golden output > stock: 50x30-rect > should produce a stable export spec for 50x30-rect 1`] = `
{
  "canvasHeightPx": 354,
  "canvasWidthPx": 591,
  "dpi": 300,
  "pixelRatio": 1,
}
`;

exports[`LabelComposer golden output > stock: 50x30-rect > should produce a stable render model for "full label with all sections" 1`] = `
{
  "bodyFontSizePx": 17,
  "columnLayout": {
    "centerWidthMm": 28.759999999999998,
    "gapCount": 1,
    "gapMm": 1,
    "innerRowMm": 48,
    "logoWidthMm": 0,
    "logoWidthPercent": 0,
    "qrWidthMm": 18.240000000000002,
    "qrWidthPercent": 38,
  },
  "customImage": undefined,
  "demotedTitle": undefined,
  "identityHeaderTitleBreakout": {
    "axisFraction": 0.2995833333333333,
    "breakoutMarginLeftPct": -0,
    "breakoutWidthPct": 166.89847009735746,
  },
  "isDangerMode": false,
  "labelLayoutMode": "identityHeader",
  "logoColumnWidthPercent": 0,
  "protocolLines": [
    "25 units (5mg)",
    "Weekly",
  ],
  "qrCodes": [
    {
      "type": "Vendor COA",
      "url": "https://example.com/coa",
    },
  ],
  "qrColumnWidthPercent": 38,
  "reconstitutionLines": [
    "1 ml BAC Water",
    "20mg per ml",
    "Mixed 20260621",
  ],
  "sourceLines": [
    "Vendor: Bear Labs",
    "Group: Group Buy Co",
    "Lot: BL-2026 20260621",
  ],
  "testIndicatorLayout": {
    "labelFontSizePx": 12,
    "labelMarkGapPx": 1,
    "markSizePx": 21,
    "rowGapPx": 2,
  },
  "testIndicators": [
    {
      "label": "Mass",
      "status": "pass",
      "type": "Mass",
    },
    {
      "label": "Purity",
      "status": "pass",
      "type": "Purity",
    },
    {
      "label": "LC/MS",
      "status": "not_run",
      "type": "LCMS",
    },
  ],
  "title": "Tirzepatide
20mg",
  "titleFontSizePx": 39,
  "titleLines": [
    "Tirzepatide",
    "20mg",
  ],
  "wrappedLines": [
    "Tirzepatide",
    "20mg",
    "1 ml BAC Water",
    "20mg per ml",
    "Mixed 20260621",
    "25 units (5mg)",
    "Weekly",
    "Vendor: Bear Labs",
    "Group: Group Buy Co",
    "Lot: BL-2026 20260621",
  ],
}
`;

exports[`LabelComposer golden output > stock: 50x30-rect > should produce a stable render model for "logo plus QR plus indicators" 1`] = `
{
  "bodyFontSizePx": 39,
  "columnLayout": {
    "centerWidthMm": 18.159999999999997,
    "gapCount": 2,
    "gapMm": 1,
    "innerRowMm": 48,
    "logoWidthMm": 9.600000000000001,
    "logoWidthPercent": 20,
    "qrWidthMm": 18.240000000000002,
    "qrWidthPercent": 38,
  },
  "customImage": "data:image/png;base64,test",
  "demotedTitle": undefined,
  "identityHeaderTitleBreakout": {
    "axisFraction": 0.41,
    "breakoutMarginLeftPct": -58.370044052863456,
    "breakoutWidthPct": 264.31718061674013,
  },
  "isDangerMode": false,
  "labelLayoutMode": "identityHeader",
  "logoColumnWidthPercent": 20,
  "protocolLines": [],
  "qrCodes": [
    {
      "type": "Vendor COA",
      "url": "https://example.com/coa",
    },
  ],
  "qrColumnWidthPercent": 38,
  "reconstitutionLines": [],
  "sourceLines": [],
  "testIndicatorLayout": {
    "labelFontSizePx": 12,
    "labelMarkGapPx": 1,
    "markSizePx": 21,
    "rowGapPx": 2,
  },
  "testIndicators": [
    {
      "label": "Mass",
      "status": "pass",
      "type": "Mass",
    },
    {
      "label": "Purity",
      "status": "fail",
      "type": "Purity",
    },
    {
      "label": "Endotoxin",
      "status": "not_run",
      "type": "Endotoxin",
    },
  ],
  "title": "Semaglutide
10mg",
  "titleFontSizePx": 39,
  "titleLines": [
    "Semaglutide",
    "10mg",
  ],
  "wrappedLines": [
    "Semaglutide",
    "10mg",
  ],
}
`;

exports[`LabelComposer golden output > stock: 50x30-rect > should produce a stable render model for "long compound name forcing wrap" 1`] = `
{
  "bodyFontSizePx": 20,
  "columnLayout": {
    "centerWidthMm": 48,
    "gapCount": 0,
    "gapMm": 1,
    "innerRowMm": 48,
    "logoWidthMm": 0,
    "logoWidthPercent": 0,
    "qrWidthMm": 0,
    "qrWidthPercent": 0,
  },
  "customImage": undefined,
  "demotedTitle": undefined,
  "identityHeaderTitleBreakout": {
    "axisFraction": 0.5,
    "breakoutMarginLeftPct": -0,
    "breakoutWidthPct": 100,
  },
  "isDangerMode": false,
  "labelLayoutMode": "identityHeader",
  "logoColumnWidthPercent": 0,
  "protocolLines": [
    "25 units (5mg)",
  ],
  "qrCodes": [],
  "qrColumnWidthPercent": 0,
  "reconstitutionLines": [
    "1 ml",
    "20mg per ml",
  ],
  "sourceLines": [],
  "testIndicatorLayout": undefined,
  "testIndicators": [],
  "title": "Very Long Experimental Compound Name That Forces Title Wrapping
20mg",
  "titleFontSizePx": 28,
  "titleLines": [
    "Very Long",
    "Experimental Compound",
    "Name That Forces",
    "Title Wrapping",
    "20mg",
  ],
  "wrappedLines": [
    "Very Long",
    "Experimental Compound",
    "Name That Forces",
    "Title Wrapping",
    "20mg",
    "1 ml",
    "20mg per ml",
    "25 units (5mg)",
  ],
}
`;

exports[`LabelComposer golden output > stock: 50x30-rect > should produce a stable render model for "minimal name only" 1`] = `
{
  "bodyFontSizePx": 39,
  "columnLayout": {
    "centerWidthMm": 48,
    "gapCount": 0,
    "gapMm": 1,
    "innerRowMm": 48,
    "logoWidthMm": 0,
    "logoWidthPercent": 0,
    "qrWidthMm": 0,
    "qrWidthPercent": 0,
  },
  "customImage": undefined,
  "demotedTitle": undefined,
  "identityHeaderTitleBreakout": {
    "axisFraction": 0.5,
    "breakoutMarginLeftPct": -0,
    "breakoutWidthPct": 100,
  },
  "isDangerMode": false,
  "labelLayoutMode": "identityHeader",
  "logoColumnWidthPercent": 0,
  "protocolLines": [],
  "qrCodes": [],
  "qrColumnWidthPercent": 0,
  "reconstitutionLines": [],
  "sourceLines": [],
  "testIndicatorLayout": undefined,
  "testIndicators": [],
  "title": "Tirzepatide",
  "titleFontSizePx": 39,
  "titleLines": [
    "Tirzepatide",
  ],
  "wrappedLines": [
    "Tirzepatide",
  ],
}
`;

exports[`LabelComposer golden output > stock: 50x30-rect > should produce a stable render model for "untested danger mode" 1`] = `
{
  "bodyFontSizePx": 22.400000000000002,
  "columnLayout": {
    "centerWidthMm": 48,
    "gapCount": 0,
    "gapMm": 1,
    "innerRowMm": 48,
    "logoWidthMm": 0,
    "logoWidthPercent": 0,
    "qrWidthMm": 0,
    "qrWidthPercent": 0,
  },
  "customImage": undefined,
  "demotedTitle": "Retatrutide
20mg",
  "identityHeaderTitleBreakout": {
    "axisFraction": 0.5,
    "breakoutMarginLeftPct": -0,
    "breakoutWidthPct": 100,
  },
  "isDangerMode": true,
  "labelLayoutMode": "identityHeader",
  "logoColumnWidthPercent": 0,
  "protocolLines": [
    "25 units (5mg)",
  ],
  "qrCodes": [],
  "qrColumnWidthPercent": 0,
  "reconstitutionLines": [
    "1 ml",
    "20mg per ml",
  ],
  "sourceLines": [],
  "testIndicatorLayout": undefined,
  "testIndicators": [],
  "title": "DANGER
UNTESTED",
  "titleFontSizePx": 39,
  "titleLines": [
    "DANGER",
    "UNTESTED",
  ],
  "wrappedLines": [
    "DANGER",
    "UNTESTED",
    "Retatrutide
20mg",
    "1 ml",
    "20mg per ml",
    "25 units (5mg)",
  ],
}
`;

exports[`LabelComposer golden output > stock: 50x30-rounded > should produce a stable export spec for 50x30-rounded 1`] = `
{
  "canvasHeightPx": 354,
  "canvasWidthPx": 591,
  "dpi": 300,
  "pixelRatio": 1,
}
`;

exports[`LabelComposer golden output > stock: 50x30-rounded > should produce a stable render model for "full label with all sections" 1`] = `
{
  "bodyFontSizePx": 19,
  "columnLayout": {
    "centerWidthMm": 29.88,
    "gapCount": 1,
    "gapMm": 0.5,
    "innerRowMm": 49,
    "logoWidthMm": 0,
    "logoWidthPercent": 0,
    "qrWidthMm": 18.62,
    "qrWidthPercent": 38,
  },
  "customImage": undefined,
  "demotedTitle": undefined,
  "identityHeaderTitleBreakout": {
    "axisFraction": 0.30489795918367346,
    "breakoutMarginLeftPct": -0,
    "breakoutWidthPct": 163.98929049531458,
  },
  "isDangerMode": false,
  "labelLayoutMode": "identityHeader",
  "logoColumnWidthPercent": 0,
  "protocolLines": [
    "25 units (5mg)",
    "Weekly",
  ],
  "qrCodes": [
    {
      "type": "Vendor COA",
      "url": "https://example.com/coa",
    },
  ],
  "qrColumnWidthPercent": 38,
  "reconstitutionLines": [
    "1 ml BAC Water",
    "20mg per ml",
    "Mixed 20260621",
  ],
  "sourceLines": [
    "Vendor: Bear Labs",
    "Group: Group Buy Co",
    "Lot: BL-2026 20260621",
  ],
  "testIndicatorLayout": {
    "labelFontSizePx": 13,
    "labelMarkGapPx": 1,
    "markSizePx": 23,
    "rowGapPx": 2,
  },
  "testIndicators": [
    {
      "label": "Mass",
      "status": "pass",
      "type": "Mass",
    },
    {
      "label": "Purity",
      "status": "pass",
      "type": "Purity",
    },
    {
      "label": "LC/MS",
      "status": "not_run",
      "type": "LCMS",
    },
  ],
  "title": "Tirzepatide
20mg",
  "titleFontSizePx": 39,
  "titleLines": [
    "Tirzepatide",
    "20mg",
  ],
  "wrappedLines": [
    "Tirzepatide",
    "20mg",
    "1 ml BAC Water",
    "20mg per ml",
    "Mixed 20260621",
    "25 units (5mg)",
    "Weekly",
    "Vendor: Bear Labs",
    "Group: Group Buy Co",
    "Lot: BL-2026 20260621",
  ],
}
`;

exports[`LabelComposer golden output > stock: 50x30-rounded > should produce a stable render model for "logo plus QR plus indicators" 1`] = `
{
  "bodyFontSizePx": 39,
  "columnLayout": {
    "centerWidthMm": 19.580000000000002,
    "gapCount": 2,
    "gapMm": 0.5,
    "innerRowMm": 49,
    "logoWidthMm": 9.8,
    "logoWidthPercent": 20,
    "qrWidthMm": 18.62,
    "qrWidthPercent": 38,
  },
  "customImage": "data:image/png;base64,test",
  "demotedTitle": undefined,
  "identityHeaderTitleBreakout": {
    "axisFraction": 0.4100000000000001,
    "breakoutMarginLeftPct": -52.6046986721144,
    "breakoutWidthPct": 250.25536261491314,
  },
  "isDangerMode": false,
  "labelLayoutMode": "identityHeader",
  "logoColumnWidthPercent": 20,
  "protocolLines": [],
  "qrCodes": [
    {
      "type": "Vendor COA",
      "url": "https://example.com/coa",
    },
  ],
  "qrColumnWidthPercent": 38,
  "reconstitutionLines": [],
  "sourceLines": [],
  "testIndicatorLayout": {
    "labelFontSizePx": 13,
    "labelMarkGapPx": 1,
    "markSizePx": 23,
    "rowGapPx": 2,
  },
  "testIndicators": [
    {
      "label": "Mass",
      "status": "pass",
      "type": "Mass",
    },
    {
      "label": "Purity",
      "status": "fail",
      "type": "Purity",
    },
    {
      "label": "Endotoxin",
      "status": "not_run",
      "type": "Endotoxin",
    },
  ],
  "title": "Semaglutide
10mg",
  "titleFontSizePx": 39,
  "titleLines": [
    "Semaglutide",
    "10mg",
  ],
  "wrappedLines": [
    "Semaglutide",
    "10mg",
  ],
}
`;

exports[`LabelComposer golden output > stock: 50x30-rounded > should produce a stable render model for "long compound name forcing wrap" 1`] = `
{
  "bodyFontSizePx": 21,
  "columnLayout": {
    "centerWidthMm": 49,
    "gapCount": 0,
    "gapMm": 0.5,
    "innerRowMm": 49,
    "logoWidthMm": 0,
    "logoWidthPercent": 0,
    "qrWidthMm": 0,
    "qrWidthPercent": 0,
  },
  "customImage": undefined,
  "demotedTitle": undefined,
  "identityHeaderTitleBreakout": {
    "axisFraction": 0.5,
    "breakoutMarginLeftPct": -0,
    "breakoutWidthPct": 100,
  },
  "isDangerMode": false,
  "labelLayoutMode": "identityHeader",
  "logoColumnWidthPercent": 0,
  "protocolLines": [
    "25 units (5mg)",
  ],
  "qrCodes": [],
  "qrColumnWidthPercent": 0,
  "reconstitutionLines": [
    "1 ml",
    "20mg per ml",
  ],
  "sourceLines": [],
  "testIndicatorLayout": undefined,
  "testIndicators": [],
  "title": "Very Long Experimental Compound Name That Forces Title Wrapping
20mg",
  "titleFontSizePx": 29,
  "titleLines": [
    "Very Long",
    "Experimental Compound",
    "Name That Forces",
    "Title Wrapping",
    "20mg",
  ],
  "wrappedLines": [
    "Very Long",
    "Experimental Compound",
    "Name That Forces",
    "Title Wrapping",
    "20mg",
    "1 ml",
    "20mg per ml",
    "25 units (5mg)",
  ],
}
`;

exports[`LabelComposer golden output > stock: 50x30-rounded > should produce a stable render model for "minimal name only" 1`] = `
{
  "bodyFontSizePx": 39,
  "columnLayout": {
    "centerWidthMm": 49,
    "gapCount": 0,
    "gapMm": 0.5,
    "innerRowMm": 49,
    "logoWidthMm": 0,
    "logoWidthPercent": 0,
    "qrWidthMm": 0,
    "qrWidthPercent": 0,
  },
  "customImage": undefined,
  "demotedTitle": undefined,
  "identityHeaderTitleBreakout": {
    "axisFraction": 0.5,
    "breakoutMarginLeftPct": -0,
    "breakoutWidthPct": 100,
  },
  "isDangerMode": false,
  "labelLayoutMode": "identityHeader",
  "logoColumnWidthPercent": 0,
  "protocolLines": [],
  "qrCodes": [],
  "qrColumnWidthPercent": 0,
  "reconstitutionLines": [],
  "sourceLines": [],
  "testIndicatorLayout": undefined,
  "testIndicators": [],
  "title": "Tirzepatide",
  "titleFontSizePx": 39,
  "titleLines": [
    "Tirzepatide",
  ],
  "wrappedLines": [
    "Tirzepatide",
  ],
}
`;

exports[`LabelComposer golden output > stock: 50x30-rounded > should produce a stable render model for "untested danger mode" 1`] = `
{
  "bodyFontSizePx": 22.400000000000002,
  "columnLayout": {
    "centerWidthMm": 49,
    "gapCount": 0,
    "gapMm": 0.5,
    "innerRowMm": 49,
    "logoWidthMm": 0,
    "logoWidthPercent": 0,
    "qrWidthMm": 0,
    "qrWidthPercent": 0,
  },
  "customImage": undefined,
  "demotedTitle": "Retatrutide
20mg",
  "identityHeaderTitleBreakout": {
    "axisFraction": 0.5,
    "breakoutMarginLeftPct": -0,
    "breakoutWidthPct": 100,
  },
  "isDangerMode": true,
  "labelLayoutMode": "identityHeader",
  "logoColumnWidthPercent": 0,
  "protocolLines": [
    "25 units (5mg)",
  ],
  "qrCodes": [],
  "qrColumnWidthPercent": 0,
  "reconstitutionLines": [
    "1 ml",
    "20mg per ml",
  ],
  "sourceLines": [],
  "testIndicatorLayout": undefined,
  "testIndicators": [],
  "title": "DANGER
UNTESTED",
  "titleFontSizePx": 39,
  "titleLines": [
    "DANGER",
    "UNTESTED",
  ],
  "wrappedLines": [
    "DANGER",
    "UNTESTED",
    "Retatrutide
20mg",
    "1 ml",
    "20mg per ml",
    "25 units (5mg)",
  ],
}
`;

exports[`LabelComposer golden output > stock: skip-default > should produce a stable export spec for skip-default 1`] = `
{
  "canvasHeightPx": 236,
  "canvasWidthPx": 472,
  "dpi": 300,
  "pixelRatio": 1,
}
`;

exports[`LabelComposer golden output > stock: skip-default > should produce a stable render model for "full label with all sections" 1`] = `
{
  "bodyFontSizePx": 11,
  "columnLayout": {
    "centerWidthMm": 23.68,
    "gapCount": 1,
    "gapMm": 0.5,
    "innerRowMm": 39,
    "logoWidthMm": 0,
    "logoWidthPercent": 0,
    "qrWidthMm": 14.82,
    "qrWidthPercent": 38,
  },
  "customImage": undefined,
  "demotedTitle": undefined,
  "identityHeaderTitleBreakout": {
    "axisFraction": 0.3035897435897436,
    "breakoutMarginLeftPct": -0,
    "breakoutWidthPct": 164.69594594594594,
  },
  "isDangerMode": false,
  "labelLayoutMode": "identityHeader",
  "logoColumnWidthPercent": 0,
  "protocolLines": [
    "25 units (5mg)",
    "Weekly",
  ],
  "qrCodes": [
    {
      "type": "Vendor COA",
      "url": "https://example.com/coa",
    },
  ],
  "qrColumnWidthPercent": 38,
  "reconstitutionLines": [
    "1 ml BAC Water",
    "20mg per ml",
    "Mixed 20260621",
  ],
  "sourceLines": [
    "Vendor: Bear Labs",
    "Group: Group Buy Co",
    "Lot: BL-2026 20260621",
  ],
  "testIndicatorLayout": {
    "labelFontSizePx": 11,
    "labelMarkGapPx": 1,
    "markSizePx": 11,
    "rowGapPx": 2,
  },
  "testIndicators": [
    {
      "label": "Mass",
      "status": "pass",
      "type": "Mass",
    },
    {
      "label": "Purity",
      "status": "pass",
      "type": "Purity",
    },
    {
      "label": "LC/MS",
      "status": "not_run",
      "type": "LCMS",
    },
  ],
  "title": "Tirzepatide
20mg",
  "titleFontSizePx": 26,
  "titleLines": [
    "Tirzepatide",
    "20mg",
  ],
  "wrappedLines": [
    "Tirzepatide",
    "20mg",
    "1 ml BAC Water",
    "20mg per ml",
    "Mixed 20260621",
    "25 units (5mg)",
    "Weekly",
    "Vendor: Bear Labs",
    "Group: Group Buy Co",
    "Lot: BL-2026 20260621",
  ],
}
`;

exports[`LabelComposer golden output > stock: skip-default > should produce a stable render model for "logo plus QR plus indicators" 1`] = `
{
  "bodyFontSizePx": 26,
  "columnLayout": {
    "centerWidthMm": 15.379999999999999,
    "gapCount": 2,
    "gapMm": 0.5,
    "innerRowMm": 39,
    "logoWidthMm": 7.800000000000001,
    "logoWidthPercent": 20,
    "qrWidthMm": 14.82,
    "qrWidthPercent": 38,
  },
  "customImage": "data:image/png;base64,test",
  "demotedTitle": undefined,
  "identityHeaderTitleBreakout": {
    "axisFraction": 0.41000000000000003,
    "breakoutMarginLeftPct": -53.966189856957094,
    "breakoutWidthPct": 253.57607282184657,
  },
  "isDangerMode": false,
  "labelLayoutMode": "identityHeader",
  "logoColumnWidthPercent": 20,
  "protocolLines": [],
  "qrCodes": [
    {
      "type": "Vendor COA",
      "url": "https://example.com/coa",
    },
  ],
  "qrColumnWidthPercent": 38,
  "reconstitutionLines": [],
  "sourceLines": [],
  "testIndicatorLayout": {
    "labelFontSizePx": 11,
    "labelMarkGapPx": 1,
    "markSizePx": 11,
    "rowGapPx": 2,
  },
  "testIndicators": [
    {
      "label": "Mass",
      "status": "pass",
      "type": "Mass",
    },
    {
      "label": "Purity",
      "status": "fail",
      "type": "Purity",
    },
    {
      "label": "Endotoxin",
      "status": "not_run",
      "type": "Endotoxin",
    },
  ],
  "title": "Semaglutide
10mg",
  "titleFontSizePx": 26,
  "titleLines": [
    "Semaglutide",
    "10mg",
  ],
  "wrappedLines": [
    "Semaglutide",
    "10mg",
  ],
}
`;

exports[`LabelComposer golden output > stock: skip-default > should produce a stable render model for "long compound name forcing wrap" 1`] = `
{
  "bodyFontSizePx": 16,
  "columnLayout": {
    "centerWidthMm": 39,
    "gapCount": 0,
    "gapMm": 0.5,
    "innerRowMm": 39,
    "logoWidthMm": 0,
    "logoWidthPercent": 0,
    "qrWidthMm": 0,
    "qrWidthPercent": 0,
  },
  "customImage": undefined,
  "demotedTitle": undefined,
  "identityHeaderTitleBreakout": {
    "axisFraction": 0.5,
    "breakoutMarginLeftPct": -0,
    "breakoutWidthPct": 100,
  },
  "isDangerMode": false,
  "labelLayoutMode": "identityHeader",
  "logoColumnWidthPercent": 0,
  "protocolLines": [
    "25 units (5mg)",
  ],
  "qrCodes": [],
  "qrColumnWidthPercent": 0,
  "reconstitutionLines": [
    "1 ml",
    "20mg per ml",
  ],
  "sourceLines": [],
  "testIndicatorLayout": undefined,
  "testIndicators": [],
  "title": "Very Long Experimental Compound Name That Forces Title Wrapping
20mg",
  "titleFontSizePx": 22,
  "titleLines": [
    "Very Long Experimental",
    "Compound Name That",
    "Forces Title Wrapping",
    "20mg",
  ],
  "wrappedLines": [
    "Very Long Experimental",
    "Compound Name That",
    "Forces Title Wrapping",
    "20mg",
    "1 ml",
    "20mg per ml",
    "25 units (5mg)",
  ],
}
`;

exports[`LabelComposer golden output > stock: skip-default > should produce a stable render model for "minimal name only" 1`] = `
{
  "bodyFontSizePx": 26,
  "columnLayout": {
    "centerWidthMm": 39,
    "gapCount": 0,
    "gapMm": 0.5,
    "innerRowMm": 39,
    "logoWidthMm": 0,
    "logoWidthPercent": 0,
    "qrWidthMm": 0,
    "qrWidthPercent": 0,
  },
  "customImage": undefined,
  "demotedTitle": undefined,
  "identityHeaderTitleBreakout": {
    "axisFraction": 0.5,
    "breakoutMarginLeftPct": -0,
    "breakoutWidthPct": 100,
  },
  "isDangerMode": false,
  "labelLayoutMode": "identityHeader",
  "logoColumnWidthPercent": 0,
  "protocolLines": [],
  "qrCodes": [],
  "qrColumnWidthPercent": 0,
  "reconstitutionLines": [],
  "sourceLines": [],
  "testIndicatorLayout": undefined,
  "testIndicators": [],
  "title": "Tirzepatide",
  "titleFontSizePx": 26,
  "titleLines": [
    "Tirzepatide",
  ],
  "wrappedLines": [
    "Tirzepatide",
  ],
}
`;

exports[`LabelComposer golden output > stock: skip-default > should produce a stable render model for "untested danger mode" 1`] = `
{
  "bodyFontSizePx": 15.200000000000001,
  "columnLayout": {
    "centerWidthMm": 39,
    "gapCount": 0,
    "gapMm": 0.5,
    "innerRowMm": 39,
    "logoWidthMm": 0,
    "logoWidthPercent": 0,
    "qrWidthMm": 0,
    "qrWidthPercent": 0,
  },
  "customImage": undefined,
  "demotedTitle": "Retatrutide
20mg",
  "identityHeaderTitleBreakout": {
    "axisFraction": 0.5,
    "breakoutMarginLeftPct": -0,
    "breakoutWidthPct": 100,
  },
  "isDangerMode": true,
  "labelLayoutMode": "identityHeader",
  "logoColumnWidthPercent": 0,
  "protocolLines": [
    "25 units (5mg)",
  ],
  "qrCodes": [],
  "qrColumnWidthPercent": 0,
  "reconstitutionLines": [
    "1 ml",
    "20mg per ml",
  ],
  "sourceLines": [],
  "testIndicatorLayout": undefined,
  "testIndicators": [],
  "title": "DANGER
UNTESTED",
  "titleFontSizePx": 26,
  "titleLines": [
    "DANGER",
    "UNTESTED",
  ],
  "wrappedLines": [
    "DANGER",
    "UNTESTED",
    "Retatrutide
20mg",
    "1 ml",
    "20mg per ml",
    "25 units (5mg)",
  ],
}
`;
